basic customization, remove unneded features

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ nickname: mc
 bio: 'A Programmer, A Geek, A Human'
 location: 'Warsaw, Poland'
 url: 'https://marcin-chwedczuk.github.io/'
-image: 'assets/images/casper.png'
+image: 'assets/images/mc.png'
 
 short_url: 'marcin-chwedczuk.github.io/'
 # google_analytics: UA-69281367-1
