--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ permalink: /:title
 
 
 # gems and other configs
-gems: [jekyll-paginate]
+gems: [jekyll-paginate, jemoji]
 exclude: [vendor]
 
 # Additional settings available on the front-matter
