--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# Jykell configuration
+# Jekyll configuration
 #markdown: redcarpet
 #highlighter: pygments
 markdown: kramdown
@@ -8,19 +8,11 @@ language: 'en-uk'
 
 # Website info
 name: 'Programming is Magic'
-description: "A place where I can share my thoughts about programming"
-
-# Author's info
-author: 'marcin-chwedczuk'
-# edit 'categories' in the front matter of every post to match this username
-nickname: mc 
-bio: 'A Programmer, A Geek, A Human'
-location: 'Warsaw, Poland'
-url: 'https://marcin-chwedczuk.github.io/'
-image: 'assets/images/mc.png'
+description: "A place where I share my thoughts about programming."
 
 short_url: 'marcin-chwedczuk.github.io/'
-# disqus: username
+google_analytics: UA-82096342-1
+disqus: marcinchwedczukgithubio 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
 baseurl: /
 
@@ -29,10 +21,8 @@ permalink: /:title
 # permalink: /author/:username
 # permalink: /tag/:tag
 
-
 # gems and other configs
-gems: [jekyll-paginate, jemoji]
-exclude: [vendor]
+plugins: [jekyll-paginate, jemoji]
 
 # Additional settings available on the front-matter
 # Site logo in the index.html (as in demo.ghost.io)
@@ -41,7 +31,6 @@ exclude: [vendor]
 # Post's page cover as a per-post basis _posts/...
 # Disqus comments as a per-post basis
 # ...
-
 
 # Settings for builing master branch with travis-ci
 # with jekyll-travis
@@ -60,8 +49,8 @@ username: marcin-chwedczuk
 branch: master
 # relative_source: ../jasper/
 # destination: ../jasper-pages/
-production_url:  https://marcin-chwedczuk.github.io/
-# source_url:      https://github.com/biomadeira/jasper/
+production_url: https://marcin-chwedczuk.github.io/
+# source_url:  https://github.com/jekyller/jasper/
 
 exclude:
   - README.md
@@ -72,3 +61,5 @@ exclude:
   - "*.Rmd"
   - vendor
   - .travis.yml
+  - node_modules
+  - .git
