--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@ language: 'en-uk'
 # Website info
 name: 'Programming is Magic'
 description: "A place where I share my thoughts about programming."
-
+url: http://blog.marcinchwedczuk.pl
+author: mc
 short_url: 'marcin-chwedczuk.github.io/'
 google_analytics: UA-82096342-1
 disqus: marcinchwedczukgithubio 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
 baseurl: /
-
 # Permalinks
 permalink: /:title
 # permalink: /author/:username
@@ -49,7 +49,7 @@ username: marcin-chwedczuk
 branch: master
 # relative_source: ../jasper/
 # destination: ../jasper-pages/
-production_url: https://marcin-chwedczuk.github.io/
+production_url: https://blog.marcinchwedczuk.pl/
 # source_url:  https://github.com/jekyller/jasper/
 
 exclude:
